Code/logs/host/{attacker_name}.log
  File "<string>", line 1
    import json,time,random,urllib.request,datetime; url='http://10.0.2.2:8088/inject'; token='lab-sim-token'; log=lambda m: print('['+datetime.datetime.now().strftime('%Y-%m-%d %H:%M:%S')+'] [injector] '+str(m), flush=True); log('starting injector to '+url); while True:   for bus in range(1,6):     payload={'token':token,'bus':bus,'v':round(random.uniform(0.72,0.86),3),'i':round(random.uniform(2.4,4.2),3),'ttl':8};     data=json.dumps(payload).encode('utf-8');     req=urllib.request.Request(url,data=data,headers={'Content-Type':'application/json'},method='POST');     try:       resp=urllib.request.urlopen(req, timeout=3).read().decode('utf-8','ignore');       log('OK bus='+str(bus)+' payload='+json.dumps(payload)+' resp='+resp[:200]);     except Exception as e:       log('FAIL bus='+str(bus)+' err='+repr(e));   time.sleep(4)
                                                                                                                                                                                                                                                                    ^
SyntaxError: invalid syntax
